--- a/app/src/main/res/layout/activity_flashlight.xml
+++ b/app/src/main/res/layout/activity_flashlight.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/black">
 
     <Switch
         android:id="@+id/switchled"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true" 
-        android:layout_centerVertical="true" 
+        android:layout_alignLeft="@+id/PREVIEW"
+        android:layout_alignStart="@+id/PREVIEW"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:switchMinWidth="120dp"
+        android:textSize="36sp"
+        android:height="60dp"/>
 
     <SurfaceView
         android:id="@+id/PREVIEW"
